Update readme with new instructions for running application.